Fix spacing in testimonials section
After changing testimonials from section to div
global section padding did not apply. Added
specific style to testimonials-section class.

--- a/css/main.css
+++ b/css/main.css
@@ -285,6 +285,7 @@ section:not(.hero-section) {
 /* testimonials-section */
 
 .testimonials-section {
+  padding-block: var(--space--huge);
   background-color: var(--color-neutral--200);
 }
 
